--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,5 @@
 /MovieAssistant/MovieAssistant/MovieAssistant.UWP/obj/x86/Debug/MainPage.xaml
 /MovieAssistant/MovieAssistant/MovieAssistant.UWP/obj/x86/Debug/MainPage.g.i.cs
 /MovieAssistant/MovieAssistant/MovieAssistant.UWP/obj/MovieAssistant.UWP.csproj.nuget.cache
+/MovieAssistant/.vs/MovieAssistant/v15/Server/sqlite3
+/MovieAssistant/.vs/MovieAssistant/v15
