--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,4 @@
 /MovieAssistant/MovieAssistant/MovieAssistant.UWP/obj/MovieAssistant.UWP.csproj.nuget.cache
 /MovieAssistant/.vs/MovieAssistant/v15/Server/sqlite3
 /MovieAssistant/.vs/MovieAssistant/v15
+/MovieAssistant/.vs/MovieAssistant/DesignTimeBuild/.dtbcache
