--- a/MovieAssistant/MovieAssistant/MovieAssistant/MovieAssistant.csproj
+++ b/MovieAssistant/MovieAssistant/MovieAssistant/MovieAssistant.csproj
@@ -23,4 +23,13 @@
       <HintPath>..\..\..\..\..\..\..\..\Programming\Microsoft Visual Studio\Common7\IDE\ReferenceAssemblies\Microsoft\Framework\MonoAndroid\v8.0\Mono.Android.dll</HintPath>
     </Reference>
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\HistoryPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\HomePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
