Movie images retrieved through API

--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,4 @@
 /MovieAssistant/.vs/MovieAssistant/v15/Server/sqlite3
 /MovieAssistant/.vs/MovieAssistant/v15
 /MovieAssistant/.vs/MovieAssistant/DesignTimeBuild/.dtbcache
+/MovieAssistant/.vs/MovieAssistant/v16
