UI Home page, carousel view 1st option

--- a/MovieAssistant/MovieAssistant/MovieAssistant.iOS/MovieAssistant.iOS.csproj
+++ b/MovieAssistant/MovieAssistant/MovieAssistant.iOS/MovieAssistant.iOS.csproj
@@ -148,6 +148,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Syncfusion.Xamarin.SfCarousel">
+      <Version>18.2.0.44</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
@@ -162,5 +165,8 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\baseline_history_white_24dp.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\baseline_favorite_white_24dp.png" />
   </ItemGroup>
 </Project>
