--- a/MovieAssistant/MovieAssistant/MovieAssistant.iOS/MovieAssistant.iOS.csproj
+++ b/MovieAssistant/MovieAssistant/MovieAssistant.iOS/MovieAssistant.iOS.csproj
@@ -148,8 +148,14 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CardsView">
+      <Version>2.7.0</Version>
+    </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfCarousel">
       <Version>18.2.0.44</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Forms">
+      <Version>2.4.11.982</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
@@ -168,5 +174,8 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\baseline_favorite_white_24dp.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\the_edge_of_seventeen_poster.jpg" />
   </ItemGroup>
 </Project>
