--- a/MovieAssistant/MovieAssistant/MovieAssistant/MovieAssistant.csproj
+++ b/MovieAssistant/MovieAssistant/MovieAssistant/MovieAssistant.csproj
@@ -10,8 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CardsView" Version="2.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Syncfusion.Xamarin.SfCarousel" Version="18.2.0.44" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />
   </ItemGroup>
 
