--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,4 @@
 /MovieAssistant/.vs/MovieAssistant/v15
 /MovieAssistant/.vs/MovieAssistant/DesignTimeBuild/.dtbcache
 /MovieAssistant/.vs/MovieAssistant/v16
+/MovieAssistant/.vs/MovieAssistant/DesignTimeBuild/.dtbcache.v2
