--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,5 @@
 /MovieAssistant/.vs/MovieAssistant/v15/Server/sqlite3
 /MovieAssistant/.vs/MovieAssistant/v15
 /MovieAssistant/.vs/MovieAssistant/DesignTimeBuild/.dtbcache
+/MovieAssistant/.vs/MovieAssistant/v16
+/MovieAssistant/.vs/MovieAssistant/DesignTimeBuild/.dtbcache.v2
