--- a/MovieAssistant/MovieAssistant/MovieAssistant.UWP/MovieAssistant.UWP.csproj
+++ b/MovieAssistant/MovieAssistant/MovieAssistant.UWP/MovieAssistant.UWP.csproj
@@ -143,8 +143,14 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.5"/>
+    <PackageReference Include="CardsView">
+      <Version>2.7.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Forms">
+      <Version>2.4.11.982</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.5" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MovieAssistant\MovieAssistant.csproj">
