--- a/MovieAssistant/MovieAssistant/MovieAssistant/MovieAssistant.csproj
+++ b/MovieAssistant/MovieAssistant/MovieAssistant/MovieAssistant.csproj
@@ -19,6 +19,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Files\movies.txt" />
+    <None Remove="Files\rules.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Files\movies.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Files\rules.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CardsView" Version="2.7.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
